[gd_scene load_steps=10 format=3 uid="uid://qdkk7a0t8w0"]

[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_snyqv"]
[ext_resource type="Script" path="res://Scenes/EnemyBody.gd" id="2_ce036"]
[ext_resource type="AudioStream" uid="uid://6pftgj5oc15b" path="res://Audio/apparition_death.wav" id="3_q8p6x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fm015"]
size = Vector3(1, 2.14514, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nrg51"]

[sub_resource type="Animation" id="Animation_1pk61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iacsr"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsyer"]
_data = {
"RESET": SubResource("Animation_1pk61"),
"float": SubResource("Animation_iacsr")
}

[sub_resource type="BoxMesh" id="BoxMesh_n7kgq"]
size = Vector3(0.25, 0.25, 0.25)

[node name="Enemy" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01954, 0)
script = ExtResource("1_snyqv")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_ce036")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0195926, 0)
shape = SubResource("BoxShape3D_fm015")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.050745, 0)
mesh = SubResource("CapsuleMesh_nrg51")
skeleton = NodePath("")

[node name="enemy_animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bsyer")
}
speed_scale = 0.51

[node name="kill" type="CPUParticles3D" parent="."]
emitting = false
amount = 100
lifetime = 0.19
one_shot = true
speed_scale = 0.25
explosiveness = 1.0
randomness = 1.0
mesh = SubResource("BoxMesh_n7kgq")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 2)
spread = 118.4
gravity = Vector3(0, 0, 0)
initial_velocity_min = 41.16
initial_velocity_max = 132.06
angular_velocity_min = -160.0

[node name="death_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q8p6x")

[connection signal="body_entered" from="RigidBody3D" to="." method="_on_rigid_body_3d_body_entered"]
